initial version 1.0 - Add initial project structure and implementation for Student Grade Calculator
- Created .gitignore to exclude build files and IDE configurations.
- Updated README.md to reflect project details and setup instructions.
- Added build.gradle for project dependencies and configurations.
- Configured gradle-wrapper.properties for Gradle version management.
- Added gradlew and gradlew.bat for Gradle wrapper support.
- Created settings.gradle to define the root project name.
- Implemented StudentGradeCalculator.java with JavaFX for GUI.
- Defined module-info.java for module dependencies.